[package]
name = "MonitorFlux"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }
thiserror = "2.0.3"
dotenvy = "0.15"
openssl = { version = "0.10", features = ["vendored"] }
tokio = { version = "1", features = ["full"] }
image = "0.25.5"
tokio-retry = "0.3"
futures = "0.3"
rayon = "1.7"
tracing = "0.1"
tracing-subscriber = "0.3"
log = "0.4.22"

rumqttc = "0.24.0"
uuid = { version = "1.11.0", features = ["v4"] }
serde_json = "1.0.133"
async-compression = { version = "0.4.18", features = ["tokio", "gzip"] }

ssh2 = { version = "0.9.4", features = ["vendored-openssl"] }
time = "0.3.36"
[[bin]]
name = "MonitorFlux"
path = "src/main.rs"