[package]
name = "MonitorFlux"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }
thiserror = "2.0.3"
dotenvy = "0.15"
openssl = { version = "0.10", features = ["vendored"] }
tokio = { version = "1", features = ["full"] }
image = "0.25.5"
tokio-retry = "0.3"
futures = "0.3"
rayon = "1.7"
tracing = "0.1"
tracing-subscriber = "0.3"
log = "0.4.22"

rocket = { version = "0.5.1", features = ["json"] }
rumqttc = "0.24.0"
uuid = { version = "1.11.0", features = ["v4"] }
serde_json = "1.0.133"
async-compression = { version = "0.4.18", features = ["tokio", "gzip"] }

ssh2 = { version = "0.9.4", features = ["vendored-openssl"] }
time = "0.3.36"
axum = "0.8.1"
http = "1.2.0"
tower-http = { version = "0.6.2", features = ["limit", "cors"] }
hyper = "1.5.2"
reqwest = "0.12.12"
rusqlite = "0.32.1"
[[bin]]
name = "MonitorFlux"
path = "src/main.rs"